--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="https://www.youtube.com/watch?v=sVoCqGrhvPA&t=2s">Video</a></li>
+            <li><a href="https://ogimg.infoglobo.com.br/in/24335560-b38-2a3/FT1086A/652/xMeme_coronavirus.jpg.pagespeed.ic.XC0O4uE8Np.jpg">Meme</a></li>
+            <li><a href="css/mo.jpg">Meu mozão</a></li>
           </ul>
         </nav>
-        <h1 class="site-title">Vanessa Me Tonini</h1>
-        <h2 class="site-subtitle">web developer</h2>
+        <h1 class="site-title">Bem vindo!</h1>
+        <h2 class="site-subtitle"></h2>
       </header>
 </body>
 </html>
