--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kaiky Matsumoto</title>
+    <link href="https://fonts.googlepis.com/css?family=Raleway:900i" rel="stylesheet">
     <link rel="stylesheet" href="css/Estilos.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
             <li><a href="css/mo.jpg">Meu mozão</a></li>
           </ul>
         </nav>
-        <h1 class="site-title">Bem vindo!</h1>
+        <h1 class="site-title">É hora do duelo!</h1>
         <h2 class="site-subtitle"></h2>
       </header>
 </body>
