--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <ul>
             <li><a href="https://www.youtube.com/watch?v=sVoCqGrhvPA&t=2s">Video</a></li>
             <li><a href="https://ogimg.infoglobo.com.br/in/24335560-b38-2a3/FT1086A/652/xMeme_coronavirus.jpg.pagespeed.ic.XC0O4uE8Np.jpg">Meme</a></li>
-            <li><a href="css/mo.jpg">Meu mozão</a></li>
+            <li><a href="css/introKaue.mp4">Meu mozão</a></li>
           </ul>
         </nav>
         <h1 class="site-title">É hora do duelo!</h1>
