--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaiky Matsumoto</title>
     <link href="https://fonts.googlepis.com/css?family=Raleway:900i" rel="stylesheet">
     <link rel="stylesheet" href="css/Estilos.css">
 </head>
 <body>
     <header>
+      
         <nav class="menu">
           <ul>
             <li><a href="https://www.youtube.com/watch?v=sVoCqGrhvPA&t=2s">Video</a></li>
@@ -15,8 +18,32 @@
             <li><a href="css/introKaue.mp4">Meu mozão</a></li>
           </ul>
         </nav>
+        <nav class="menu1">
+          <ul>
+      
+          </ul>
+        </nav>
         <h1 class="site-title">É hora do duelo!</h1>
         <h2 class="site-subtitle"></h2>
       </header>
+      <section>
+        <h2>Portfólio</h2>
+        <figure>
+          <img class="img-portfolio" src="css/eu.png" alt="eCommerce">
+          <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="css/eu.png" alt=">Mobile">
+          <figcaption>Mobile</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="css/eu.png" alt="Web design">
+          <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="css/eu.png">
+          <figcaption>Projetos pessoais</figcaption>
+        </figure>
+      </section>
 </body>
 </html>
