--- a/index.html
+++ b/index.html
@@ -5,45 +5,45 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaiky Matsumoto</title>
-    <link href="https://fonts.googlepis.com/css?family=Raleway:900i" rel="stylesheet">
     <link rel="stylesheet" href="css/Estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Indie+Flower&family=Kaushan+Script&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header>
-      
         <nav class="menu">
           <ul>
             <li><a href="https://www.youtube.com/watch?v=sVoCqGrhvPA&t=2s">Video</a></li>
-            <li><a href="https://ogimg.infoglobo.com.br/in/24335560-b38-2a3/FT1086A/652/xMeme_coronavirus.jpg.pagespeed.ic.XC0O4uE8Np.jpg">Meme</a></li>
-            <li><a href="css/introKaue.mp4">Meu mozão</a></li>
+            <li><a href="https://ogimg.infoglobo.com.br/in/24335560-b38-2a3/FT1086A/652/xMeme_coronavirus.jpg.pagespeed.ic.XC0O4uE8Np.jpg">Portfólio</a></li>
+            <li><a href="css/introKaue.mp4">meu mozão</a></li>
           </ul>
         </nav>
-        <nav class="menu1">
-          <ul>
-      
-          </ul>
-        </nav>
-        <h1 class="site-title">É hora do duelo!</h1>
-        <h2 class="site-subtitle"></h2>
+        <div>
+          <h1 class="site-title">Kaiky Matsumoto</h1>
+          <h2 class="site-subtitle">Desenvolvedor médio ▬ desgustador de cachaça </h2>
+          <h2 class="site-subtitle"></h2>
+        </div>
+  
       </header>
-      <section>
-        <h2>Portfólio</h2>
+      <section class= "Portfólio">
+        <h3>Portfólio</h3>
+        <div class="grid">
         <figure>
-          <img class="img-portfolio" src="css/eu.png" alt="eCommerce">
-          <figcaption>eCommerce</figcaption>
+          <img class="img-portfolio1" src="css/inteli.png" alt="eCommerce">
+          <figcaption class="figcaption">Editor</figcaption>
         </figure>
         <figure>
-          <img class="img-portfolio" src="css/eu.png" alt=">Mobile">
-          <figcaption>Mobile</figcaption>
+          <img class="img-portfolio1" src="css/lol.png" alt=">Mobile">
+          <figcaption class="figcaption">Gamer</figcaption>
         </figure>
         <figure>
           <img class="img-portfolio" src="css/eu.png" alt="Web design">
-          <figcaption>Web design</figcaption>
+          <figcaption class="figcaption">MEU MOZÃO KKKKK</figcaption>
         </figure>
         <figure>
-          <img class="img-portfolio" src="css/eu.png">
-          <figcaption>Projetos pessoais</figcaption>
+          <img class="img-portfolio" src="css/jesus.jpg">
+          <figcaption class="figcaption">Projetos pessoais</figcaption>
         </figure>
+      </div>
       </section>
 </body>
 </html>
