--- a/index.html
+++ b/index.html
@@ -6,25 +6,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaiky Matsumoto</title>
     <link rel="stylesheet" href="css/Estilos.css">
+    <script src="https://kit.fontawesome.com/c44cd0e205.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Indie+Flower&family=Kaushan+Script&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header>
         <nav class="menu">
-          <ul>
-            <li><a href="https://www.youtube.com/watch?v=sVoCqGrhvPA&t=2s">Video</a></li>
-            <li><a href="https://ogimg.infoglobo.com.br/in/24335560-b38-2a3/FT1086A/652/xMeme_coronavirus.jpg.pagespeed.ic.XC0O4uE8Np.jpg">Portfólio</a></li>
-            <li><a href="css/introKaue.mp4">meu mozão</a></li>
+          <ul class="container"> 
+            <li><a href=#Sobre>Sobre</a></li>
+            <li><a href=#portifolio>Projetos</a></li>
+            <li><a href=#contato>contato</a></li>
           </ul>
         </nav>
-        <div>
+        <div class="titulo">
           <h1 class="site-title">Kaiky Matsumoto</h1>
           <h2 class="site-subtitle">Desenvolvedor médio ▬ desgustador de cachaça </h2>
           <h2 class="site-subtitle"></h2>
         </div>
   
       </header>
-      <section class= "Portfólio">
+
+      <section class="Sobre container" id="Sobre">
+        <h5>Sobre</h5>
+        <figure class="avatar">
+          <img src="css/eu.png" alt="Kaiky"> 
+        </figure>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+          Fugiat eveniet delectus, velit dolor odio, amet officia tempore, 
+          fuga nostrum error sit doloremque animi. Unde quibusdam asperiores et ea libero corrupti.
+        </p>
+          <p>
+           Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+           Explicabo nihil tempore vero delectus ipsum deserunt autem, quo hic, rem, libero modi. 
+           Eum, soluta in molestias possimus suscipit similique cum voluptatum.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+          Animi impedit ipsum architecto nam ex tempora nulla explicabo perspiciatis officia,
+           atque quos earum ab voluptatibus voluptatum voluptates, esse, dolorem quas asperiores.
+           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio incidunt, aperiam odit vero, 
+           praesentium harum sit accusamus consequatur tenetur illum neque? 
+           Ducimus quod, incidunt fugiat fuga quasi ipsum ut maiores.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil illo magnam molestias, delectus quasi, id pariatur ipsa ipsum 
+          cupiditate iusto beatae repellendus sed nulla dolore at fugit. Fugit, assumenda placeat! Lorem, ipsum dolor sit amet consectetur 
+        </p>
+      </section>
+      <section class= "Portfólio contaniner" id="portifolio">
         <h3>Portfólio</h3>
         <div class="grid">
         <figure>
@@ -44,6 +76,23 @@
           <figcaption class="figcaption">Projetos pessoais</figcaption>
         </figure>
       </div>
+      </section>
+      <section class="contato container" id="contato">
+        <h4>@Contato</h4>
+        <div class="grid icons">
+          <a target="_blank" href="https://github.com/vanessametonini">
+           <i class="fab fa-github"></i>
+          </a>
+          <a target="_blank" href="https://twitter.com/vanessametonini">
+           <i class="fab fa-twitter"></i>
+          </a>
+          <a target="_blank" href="https://linkedin.com/in/vanessametonini">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="mailto:vanessa.tonini@caelum.com.br">
+           <i class="fab fa-instagram"></i>
+          </a>
+        </div>
       </section>
 </body>
 </html>
