--- a/index.html
+++ b/index.html
@@ -24,32 +24,25 @@
           <h2 class="site-subtitle">Desenvolvedor médio ▬ desgustador de cachaça </h2>
           <h2 class="site-subtitle"></h2>
         </div>
+      
   
       </header>
 
       <section class="Sobre container" id="Sobre">
         <h5>Sobre</h5>
-        <figure class="avatar">
-          <img src="css/eu.png" alt="Kaiky"> 
+        <figure >
+          <img src="css/eu.png" alt="Kaiky" class="avatar"> 
         </figure>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-          Fugiat eveniet delectus, velit dolor odio, amet officia tempore, 
-          fuga nostrum error sit doloremque animi. Unde quibusdam asperiores et ea libero corrupti.
+          Meu nome é Kaiky Matsumoto, tenho 16 anos e faço o ensino medio no IFSP integrado com o curso de informática.
         </p>
+
           <p>
-           Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-           Explicabo nihil tempore vero delectus ipsum deserunt autem, quo hic, rem, libero modi. 
-           Eum, soluta in molestias possimus suscipit similique cum voluptatum.
+            
         </p>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-          Animi impedit ipsum architecto nam ex tempora nulla explicabo perspiciatis officia,
-           atque quos earum ab voluptatibus voluptatum voluptates, esse, dolorem quas asperiores.
-           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio incidunt, aperiam odit vero, 
-           praesentium harum sit accusamus consequatur tenetur illum neque? 
-           Ducimus quod, incidunt fugiat fuga quasi ipsum ut maiores.
+          Lorem i
         </p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil illo magnam molestias, delectus quasi, id pariatur ipsa ipsum 
@@ -59,10 +52,14 @@
       <section class= "Portfólio contaniner" id="portifolio">
         <h3>Portfólio</h3>
         <div class="grid">
-        <figure>
-          <img class="img-portfolio1" src="css/inteli.png" alt="eCommerce">
-          <figcaption class="figcaption">Editor</figcaption>
-        </figure>
+
+          <div class="card-front">
+            <figure>
+              <img class="img-portfolio1" src="css/inteli.png" alt="eCommerce">
+              <figcaption class="figcaption">Editor</figcaption>
+            </figure>
+          </div>
+
         <figure>
           <img class="img-portfolio1" src="css/lol.png" alt=">Mobile">
           <figcaption class="figcaption">Gamer</figcaption>
